--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "starkmd",
-  "version": "8.0.0",
+  "version": "9.0.0",
   "description": "NOT THE BEST BOT IN THE UNIVERSE, BUT ENJOYMENT IS PROMISING 💫",
   "main": "index.js",
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
     "start": "pm2 start index.js --name STARK-MD --attach",
     "stop": "pm2 stop STARK-MD",
@@ -30,49 +27,30 @@
   "author": "ALI-INXIDE",
   "license": "MIT",
   "dependencies": {
-    "@whiskeysockets/baileys": "7.0.0-rc.9",
-    "@adiwajshing/keyed-db": "^0.2.4",
-    "@dark-yasiya/scrap": "1.0.1",
-    "@dark-yasiya/yt-dl.js": "latest",
-    "@vitalets/google-translate-api": "^9.2.0",
-    "axios": "^1.7.9",
-    "adm-zip": "^0.5.16",
-    "body-parser": "^1.20.3",
-    "buffer": "^6.0.3",
-    "canvas": "^3.0.1",
-    "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "crypto": "latest",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "node-webpmux": "^3.1.8",
+    "@whiskeysockets/baileys": "7.0.0-rc.9",
+    "@x-kira/database": "latest",
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0-rc.12",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
-    "node-cache": "5.1.2",
     "express": "^4.19.2",
-    "fluent-ffmpeg": "^2.1.3",
     "file-type": "^19.4.0",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.1",
-    "fs-extra": "^11.2.0",
+    "fs-extra": "^11.3.3",
     "google-tts-api": "^2.0.2",
-    "heroku-client": "^3.1.0",
-    "javascript-obfuscator": "^4.1.1",
-    "jimp": "^1.6.0",
     "megajs": "^1.3.3",
     "mime-types": "^2.1.35",
     "moment-timezone": "^0.5.45",
+    "node-cache": "5.1.2",
     "node-fetch": "^3.3.2",
+    "node-webpmux": "^3.1.8",
     "path": "^0.12.7",
     "pino": "^7.0.5",
-    "pm2": "^6.0.8",
-    "puppeteer": "^23.3.2",
-    "qrcode-terminal": "^0.12.0",
-    "sequelize": "^6.37.5",
-    "sqlite3": "^5.1.6",
+    "pm2": "^6.0.14",
+    "sharp": "^0.34.5",
     "translatte": "^3.0.1",
-    "unzipper": "^0.10.11",
-    "util": "^0.12.5",
-    "wa-sticker-formatter": "^4.4.4",
-    "webcrack": "^2.14.1",
-    "yt-search": "^2.11.0"
+    "wa-sticker-formatter": "^4.4.4"
   }
 }
