Add adm-zip dependency to package.json

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node-fetch": "^3.3.2",
     "node-webpmux": "^3.1.8",
     "path": "^0.12.7",
+    "adm-zip": "^0.5.16",
     "pino": "^7.0.5",
     "pm2": "^6.0.14",
     "sharp": "^0.34.5",
