--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "google-tts-api": "^2.0.2",
     "megajs": "^1.3.3",
     "mime-types": "^2.1.35",
+    "yt-search": "^2.11.0"
     "moment-timezone": "^0.5.45",
     "node-cache": "5.1.2",
     "node-fetch": "^3.3.2",
